fix scroll on mobile

--- a/app/assets/stylesheets/_hitster.scss
+++ b/app/assets/stylesheets/_hitster.scss
@@ -33,6 +33,10 @@ body {
     background-attachment: fixed; 
 }
 
+@media (hover: none) and (pointer: coarse) {
+    body { background-attachment: scroll; }
+}
+
 /* Every full-screen section is a positioning context */
 .ui-component {
     position: relative;
